2002-05-29  Mo DeJong  <supermo@bayarea.net>

	* gui/projedit.tcl (add_files_cb): Rewrite the add_files_cb
	method to avoid invoking [lsearch -nocase $files $file].
	This lsearch option was a local hack that is not in Tcl 8.3.
	To speed things up and support no case searching, we create
	a map that is checked as we loop over added files. Pass
	a list of file names to add_files_cb instead of wasting
	time in a useless eval.

2002-05-29  Mo DeJong  <supermo@bayarea.net>

	* gui/dialog.tcl (tk_dialog_with_widgets): Don't set .
	as the transient for the dialog. This keeps the dialog
	from being mapped when . is withdrawn under Win32/Tk 8.3.

2002-05-29  Mo DeJong  <supermo@bayarea.net>

	* gui/classtreepane.tcl (print): Rename PrintDialog,
	use itk_component(hull) not this, reorder arguments.
	Invoke Window::transient to explicitly set the
	transientfor property for the PrintDialog.
	* gui/dialog.tcl: Remove the poorly named -parent
	option for the Dialog class. A transient window
	should set its master using Window::transient.
	* gui/includepane.tcl (print): Rename PrintDialog,
	use itk_component(hull) not this, reorder arguments.
	Invoke Window::transient to explicitly set the
	transientfor property for the PrintDialog.
	* gui/targetmgr.tcl (edit_target): Invoke the
	Window::transient method instead of using -parent.
	* gui/xrefpane.tcl (print): Rename PrintDialog,
	use itk_component(hull) not this, reorder arguments.
	Invoke Window::transient to explicitly set the
	transientfor property for the PrintDialog.

2002-05-29  Mo DeJong  <supermo@bayarea.net>

	* gui/classpane.tcl:
	* gui/classtreepane.tcl:
	* gui/editorpane.tcl:
	* gui/greppane.tcl:
	* gui/includepane.tcl:
	* gui/makepane.tcl:
	* gui/projedit.tcl:
	* gui/retrieverpane.tcl:
	* gui/xrefpane.tcl: Rework use of $topw member
	variable in pane windows. Use $itk_component(hull)
	instead of namespace tail ${this}. Use the
	-title and -iconname options from the Window class.